package voyatrip.command.types;

public enum CommandAction {
    ADD,
    DELETE_BY_INDEX,
    DELETE_BY_NAME,
    LIST,
    CHANGE_DIRECTORY,
    EXIT
}
